# Clinical-ops-saas

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/clinical-core/: README.md  alembic.ini  requirements.txt
apps/clinical-core/alembic/: env.py
apps/clinical-core/alembic/versions/: 0001_initial_persistence.py
apps/clinical-core/src/: main.py
apps/clinical-core/src/api/: router.py
apps/clinical-core/src/application/services/: document_service.py
apps/clinical-core/src/domain/entities/: document.py  extraction_run.py
apps/clinical-core/src/infrastructure/db/: __init__.py  config.py  models.py  session.py
apps/clinical-core/src/schemas/: document.py
apps/clinical-core/tests/: test_document_schemas.py  test_sqlalchemy_repositories.py
apps/openmed-adapter/: README.md  pyproject.toml
apps/openmed-adapter/src/openmed_adapter/: __init__.py  client.py  config.py  exceptions.py  models.py
apps/openmed-adapter/tests/: test_client.py  test_config.py
apps/web/: README.md  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/documents/[id]/: page.tsx
apps/web/components/: document-storage.ts
apps/web/lib/: clinicalCore.ts  types.ts
apps/worker/: README.md  requirements.txt
apps/worker/src/worker/: __init__.py  config.py  db.py  main.py  openmed.py  processor.py  queue.py  schemas.py
docs/api/: clinical-document-v1.md
docs/architecture/: local-dev.md  openmed-integration.md
docs/codex-prompts/: implementation-order.md
scripts/: dev-check-openmed.sh  dev-clone-openmed.sh  dev-start-openmed.sh
(+5 files in other folders)
