[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmed-adapter"
version = "0.1.0"
description = "HTTP client adapter for OpenMed"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
